src/test/ui/wf/wf-trait-associated-type-trait.stderr
error[E0277]: the trait bound `<Self as SomeTrait>::Type1: std::marker::Copy` is not satisfied
  --> $DIR/wf-trait-associated-type-trait.rs:11:5
   |
LL | struct IsCopy<T:Copy> { x: T }
   | --------------------- required by `IsCopy`
LL | 
LL | trait SomeTrait {
   |                - help: consider further restricting the associated type: `where <Self as SomeTrait>::Type1: std::marker::Copy`
LL |     type Type1;
LL |     type Type2 = IsCopy<Self::Type1>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `<Self as SomeTrait>::Type1`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
